# Switch_Board_qt

./: CMakeLists.txt  app_libusb.cpp  app_libusb.h  main.cpp  switch_board.cpp  switch_board.h  switch_board.ui
